--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ script:
 # Test on installing package from official repo
     - juju -f pacman --noconfirm -S sysstat
     - juju -f iostat
+    - juju -f pacman -S --noconfirm base-devel
+    - juju -f yaourt -S --noconfirm biicode
 # Test on installing package from official repo with root access (TODO: may not work in ubuntu)
     #- juju -f pacman --noconfirm -S iftop
     #- sudo bin/juju -r iftop -t -s 5
